@@ -19,6 +19,7 @@
 import datetime
 import gettext
 import locale
+import re
 import subprocess
 
 from apt.utils import *
@@ -208,13 +209,20 @@ class Ubuntu(Distro):
         full_archive_url = cache[pkgname].candidate.uri
         split_at_pool = full_archive_url.split("pool")[0]
         # support ppas and extras.ubuntu.com
-        if (split_at_pool.endswith("/ppa/ubuntu/") or
-            split_at_pool.startswith("http://extras.ubuntu.com")):
+        if split_at_pool.endswith("/ppa/ubuntu/"):
             # it's a ppa, generate the icon_url for a ppa
             split_at_ppa = split_at_pool.split("/ppa/")[0]
             downloadable_icon_url = []
             downloadable_icon_url.append(split_at_ppa)
             downloadable_icon_url.append("/meta/ppa/")
+            downloadable_icon_url.append(icon_filename)
+            return "".join(downloadable_icon_url)
+        elif re.match("http://(.*)extras.ubuntu.com/", split_at_pool):
+            # it's from extras.ubuntu.com, generate the icon_url for a ppa
+            split_at_ubuntu = split_at_pool.split("/ubuntu/")[0]
+            downloadable_icon_url = []
+            downloadable_icon_url.append(split_at_ubuntu)
+            downloadable_icon_url.append("/meta/")
             downloadable_icon_url.append(icon_filename)
             return "".join(downloadable_icon_url)
         else:
