@@ -13,6 +13,9 @@ software-center (2.1.20) UNRELEASED; urgency=low
     - add pulse for pending purchases (LP: #637377)
   * softwarecenter/utils.py:
     - improve logging of the imagedownloader
+  * softwarecenter/distro/Ubuntu.py:
+    - fix icon downloading from extras.ubuntu.com and support possible
+      country mirrors
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 14 Sep 2010 14:07:00 +0200
 
